<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.goateeddev.swipedetector.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/tv_background"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_left"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/btn_left" />

        <ImageSwitcher
            android:id="@+id/is_switcher"
            android:layout_width="180dp"
            android:layout_height="180dp" />

        <Button
            android:id="@+id/btn_right"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:text="@string/btn_right" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_select"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_select" />

</LinearLayout>
